fixed search icon not black on iOS.

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header {
 }
 .search form button {
   background-color: transparent;
+  color: black;
   border: none;
 }
 .search form button svg {
